# tabularis

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  roadmap.json  tsconfig.app.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  readme-downloads.yml  release.yml  sync-roadmap.yml
.gitster/: gitster.json  gitster.md
.rules/: general.md  react.md  testing.md  typescript.md
aur/: PKGBUILD
docs/: THEME_SYSTEM_SPEC.md
public/fonts/: fonts.css
scripts/: sync-links.js  sync-version.js  update-roadmap.js
src/: App.tsx  index.css  main.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ai_models.yaml  commands.rs  config.rs  dump_commands.rs  dump_commands_tests.rs  export.rs  keychain_utils.rs  lib.rs  log_commands.rs  main.rs  models.rs  preferences.rs  ssh_tunnel.rs  theme_commands.rs  theme_models.rs  updater.rs
src-tauri/src/drivers/: README.md  common.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/drivers/mysql/: extract.rs  mod.rs  types.rs
src-tauri/src/drivers/postgres/: extract.rs  mod.rs  types.rs
src-tauri/src/drivers/sqlite/: extract.rs  mod.rs  types.rs
src-tauri/src/mcp/: install.rs  mod.rs
src-tauri/tests/: integration_tests.rs
src/config/: links.ts
src/contexts/: DatabaseContext.ts  DatabaseContext.tsx  DatabaseProvider.test.tsx  DatabaseProvider.tsx  EditorContext.ts  EditorProvider.tsx  SavedQueriesContext.ts  SavedQueriesProvider.test.tsx  SavedQueriesProvider.tsx  SettingsContext.ts  SettingsProvider.tsx  ThemeContext.ts  ThemeProvider.tsx  UpdateContext.ts  UpdateProvider.tsx
src/hooks/: useDataTypes.ts  useDatabase.test.ts  useDatabase.ts  useEditor.test.ts  useEditor.ts  useSavedQueries.test.ts  useSavedQueries.ts  useSettings.test.ts  useSettings.ts  useTheme.test.ts  useUpdate.ts
src/i18n/: config.ts
src/pages/: Connections.tsx  Editor.tsx  SchemaDiagramPage.tsx  Settings.tsx
src/test/: setup.ts
src/themes/: colorUtils.test.ts  colorUtils.ts  themeRegistry.test.ts  themeRegistry.ts  themeUtils.test.ts  themeUtils.ts
src/types/: dataTypes.ts  editor.ts  sidebar.ts  theme.ts
src/utils/: autocomplete.ts  clipboard.ts  connections.ts  contextMenu.ts  dataGrid.ts  dumpUtils.test.ts  dumpUtils.ts  editor.ts  formatTime.ts  identifiers.ts  layoutWorker.ts  modalForms.ts  pendingInsertions.ts  queryModal.ts  queryParameters.test.ts  routines.ts  schema.ts  schemaDiagram.ts  settings.ts  settingsUI.ts  sql.test.ts  sql.ts  (+9 more)
website/: index.html
(+107 files in other folders)
